--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^11.0",
-        "guzzlehttp/guzzle": "^7.9"
+        "guzzlehttp/guzzle": "^7.9",
+        "friendsofphp/php-cs-fixer": "^3.68"
     },
     "autoload": {
         "psr-4": {
